FOG_Server/etc/ufw/user.rules
*filter
:ufw-user-input - [0:0]
:ufw-user-output - [0:0]
:ufw-user-forward - [0:0]
:ufw-before-logging-input - [0:0]
:ufw-before-logging-output - [0:0]
:ufw-before-logging-forward - [0:0]
:ufw-user-logging-input - [0:0]
:ufw-user-logging-output - [0:0]
:ufw-user-logging-forward - [0:0]
:ufw-after-logging-input - [0:0]
:ufw-after-logging-output - [0:0]
:ufw-after-logging-forward - [0:0]
:ufw-logging-deny - [0:0]
:ufw-logging-allow - [0:0]
:ufw-user-limit - [0:0]
:ufw-user-limit-accept - [0:0]
### RULES ###

### tuple ### allow tcp 22 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 22 -j ACCEPT

### tuple ### allow tcp 80 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 80 -j ACCEPT

### tuple ### allow tcp 443 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 443 -j ACCEPT

### tuple ### allow tcp 21 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 21 -j ACCEPT

### tuple ### allow udp 67 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p udp --dport 67 -j ACCEPT

### tuple ### allow udp 68 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p udp --dport 68 -j ACCEPT

### tuple ### allow udp 69 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p udp --dport 69 -j ACCEPT

### tuple ### allow udp 4011 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p udp --dport 4011 -j ACCEPT

### tuple ### allow tcp 111 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 111 -j ACCEPT

### tuple ### allow udp 111 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p udp --dport 111 -j ACCEPT

### tuple ### allow tcp 2049 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 2049 -j ACCEPT

### tuple ### allow udp 2049 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p udp --dport 2049 -j ACCEPT

### tuple ### allow tcp 20048 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 20048 -j ACCEPT

### tuple ### allow udp 20048 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p udp --dport 20048 -j ACCEPT

### tuple ### allow tcp 9100 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 9100 -j ACCEPT

### tuple ### allow udp 49152:65535 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p udp -m multiport --dports 49152:65535 -j ACCEPT

### tuple ### allow udp 63100:63200 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p udp -m multiport --dports 63100:63200 -j ACCEPT

### END RULES ###

### LOGGING ###
-A ufw-after-logging-input -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-after-logging-forward -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-I ufw-logging-deny -m conntrack --ctstate INVALID -j RETURN -m limit --limit 3/min --limit-burst 10
-A ufw-logging-deny -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-logging-allow -j LOG --log-prefix "[UFW ALLOW] " -m limit --limit 3/min --limit-burst 10
### END LOGGING ###

### RATE LIMITING ###
-A ufw-user-limit -m limit --limit 3/minute -j LOG --log-prefix "[UFW LIMIT BLOCK] "
-A ufw-user-limit -j REJECT
-A ufw-user-limit-accept -j ACCEPT
### END RATE LIMITING ###
COMMIT
